--- a/index.html
+++ b/index.html
@@ -53,8 +53,25 @@
         </div>
     </header>
     <section class="news">
-        <div class="headlines">
-            <p>HEADLINES</p>
+        <div class="news0 headlines" onclick="nextSlide()">
+            <div class="slide active fade">
+                <div class="slide-text">
+                    <div class="slide-text__title">Lorem, ipsum 1</div>
+                    <div class="slide-text__description">Quod deleniti laboriosam cupiditate dolor sit amet consectetur adipisicing elit.</div>
+                </div>
+            </div>
+            <div class="slide fade">
+                <div class="slide-text">
+                    <div class="slide-text__title">Lorem, ipsum 2</div>
+                    <div class="slide-text__description">Quod deleniti laboriosam cupiditate dolor sit amet consectetur adipisicing elit.</div>
+                </div>
+            </div>
+            <div class="slide fade">
+                <div class="slide-text">
+                    <div class="slide-text__title">Lorem, ipsum 3</div>
+                    <div class="slide-text__description">Quod deleniti laboriosam cupiditate dolor sit amet consectetur adipisicing elit.</div>
+                </div>
+            </div>
         </div>
         <div class="news1">
             <p>yo1</p>
@@ -78,6 +95,6 @@
     </section>
 
 
-
+    <script src="script.js"></script>
 </body>
 </html>
