Feat: add video in the news4 div

--- a/index.html
+++ b/index.html
@@ -111,7 +111,11 @@
             </div>
         </div>
         <div class="news4">
-            <p>yo4</p>
+            
+            <video controls>
+                <source src="/video/artemis_launch.mp4" type="video/mp4">
+            </video>
+            
         </div>
         <div class="news5">
             <a href="#"><img src="/img/oceans.jpg" alt="oceans.jpg"></a>
