--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+    <link href="https://vjs.zencdn.net/7.20.2/video-js.css" rel="stylesheet" />
     <title>Home</title>
 </head>
 <body>
@@ -114,8 +115,15 @@
         </div>
 
         <div class="news4">
-            
-            <video controls>
+                <!-- https://videojs.com/getting-started -->
+            <video
+                id="my-video"
+                class="video-js"
+                controls
+                preload="auto"
+                poster="img/nasa-video-preview.jpg"
+                data-setup="{}"
+            >
                 <source src="/video/artemis_launch.mp4" type="video/mp4">
             </video>
             
