--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
         </div>
 
         <div class="news4">
+            <!-- video from youtube, for demonstration purposes -->
             <video
                 controls
                 preload="auto"
