Fix: make news2 hover with JS

--- a/index.html
+++ b/index.html
@@ -86,14 +86,18 @@
             </div>         
         </div>
 
-        <div class="news2">
-            <img src="./img/nasaguy.png" alt="nasaguy.png">
-            <span class="news2__txt"><h4>Expedition 48</h4>
+        <div id="news2" class="news2">
+            <img id="news2__img" src="./img/nasaguy.png" alt="nasaguy.png">
+            <span  id="news2__headline" class="news2__headline" onmouseover="hoverNews()" ><h4>Expedition 48</h4>
+                <p id="news2__headline__p"><b>NASA's Record-breaking Astronaut, Crewmates Safely Return to  Earth.</b></p>
+            </span>
+            <span id="news2__txt" class="news2__txt">
                 <p>
-                    <b>NASA's Record-breaking Astronaut, Crewmates Safely Return to  Earth.</b><br>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed unde at quis temporibus sit, accusantium hic voluptatum consectetur sequi aliquam deserunt sapiente similique repellat amet, sunt rem dolore qui incidunt, expedita excepturi. Adipisci hic suscipit sequi impedit rerum dicta voluptatum, voluptates tempore inventore.
                 </p>
             </span>
+                
+            
         </div> 
 
         <div class="news3">
